test/warnings/bad/main_label_in_data.ulm
.data
main: ; main label should not be used in data section
    .string "foo"